RESOLVED FIXED231076
[JSC][GLib] Fix typo in WrapperMap creation methods
https://bugs.webkit.org/show_bug.cgi?id=231076
Summary [JSC][GLib] Fix typo in WrapperMap creation methods
Olivier Blin
Reported 2021-10-01 06:22:04 PDT
Use Wrapper instead of Wrappper
Attachments
Patch (4.80 KB, patch)
2021-10-01 06:30 PDT, Olivier Blin
no flags
Olivier Blin
Comment 1 2021-10-01 06:30:10 PDT
Michael Catanzaro
Comment 2 2021-10-01 06:40:00 PDT
Comment on attachment 439848 [details] Patch Thanks for taking the time to fix this.
EWS
Comment 3 2021-10-01 07:24:06 PDT
Committed r283366 (242375@main): <https://commits.webkit.org/242375@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439848 [details].
Note You need to log in before you can comment on or make changes to this bug.