[JSC][GLib] Fix typo in WrapperMap creation methods https://bugs.webkit.org/show_bug.cgi?id=231076

Patch by Olivier Blin <olivier.blin@softathome.com> on 2021-10-01
Reviewed by Michael Catanzaro.

* API/glib/JSCContext.cpp:
(jscContextGetOrCreateJSWrapper):
(jscContextCreateContextWithJSWrapper):
* API/glib/JSCWrapperMap.cpp:
(JSC::WrapperMap::createJSWrapper):
(JSC::WrapperMap::createContextWithJSWrapper):
(JSC::WrapperMap::createJSWrappper): Deleted.
(JSC::WrapperMap::createContextWithJSWrappper): Deleted.
* API/glib/JSCWrapperMap.h:

Canonical link: https://commits.webkit.org/242375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283366 268f45cc-cd09-0410-ab3c-d52691b4dbfc