Source/JavaScriptCore/API/glib/JSCWrapperMap.h
@@ -47,8 +47,8 @@ public:
     void registerClass(JSCClass*);
     JSCClass* registeredClass(JSClassRef) const;
 
-    JSObject* createJSWrappper(JSGlobalContextRef, JSClassRef, JSValueRef prototype, gpointer, GDestroyNotify);
-    JSGlobalContextRef createContextWithJSWrappper(JSContextGroupRef, JSClassRef, JSValueRef prototype, gpointer, GDestroyNotify);
+    JSObject* createJSWrapper(JSGlobalContextRef, JSClassRef, JSValueRef prototype, gpointer, GDestroyNotify);
+    JSGlobalContextRef createContextWithJSWrapper(JSContextGroupRef, JSClassRef, JSValueRef prototype, gpointer, GDestroyNotify);
     JSObject* jsWrapper(gpointer wrappedObject) const;
     gpointer wrappedObject(JSGlobalContextRef, JSObjectRef) const;
 
